[Feat] Load dataset

--- a/ANBW_v1.ipynb
+++ b/ANBW_v1.ipynb
@@ -1,13 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "93e1336d",
+   "metadata": {},
+   "source": [
+    "### Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d1e34788",
+   "execution_count": 1,
+   "id": "2ab59d37",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-08T14:42:38.575921Z",
-     "start_time": "2021-05-08T14:42:36.313601Z"
+     "end_time": "2021-05-09T04:33:44.074136Z",
+     "start_time": "2021-05-09T04:33:38.513830Z"
     }
    },
    "outputs": [],
@@ -30,8 +38,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "35d3c3e4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-09T04:35:03.565657Z",
+     "start_time": "2021-05-09T04:35:03.549622Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA avilable: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"CUDA avilable:\", torch.cuda.is_available())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c32510d",
+   "metadata": {},
+   "source": [
+    "### Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b2fd8b6c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-09T04:39:20.576690Z",
+     "start_time": "2021-05-09T04:39:19.124556Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv(\"./data/train.csv\")\n",
+    "test = pd.read_csv(\"./data/test.csv\")\n",
+    "submission = pd.read_csv(\"./data/submission.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3038f761",
+   "id": "21f776a4",
    "metadata": {},
    "outputs": [],
    "source": []
