--- a/ANBW_v2.ipynb
+++ b/ANBW_v2.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:25:05.077229Z",
-     "start_time": "2021-05-20T10:25:05.071259Z"
+     "end_time": "2021-05-21T05:24:26.888647Z",
+     "start_time": "2021-05-21T05:24:26.881653Z"
     }
    },
    "outputs": [],
@@ -24,15 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:25:09.187785Z",
-     "start_time": "2021-05-20T10:25:05.325457Z"
+     "end_time": "2021-05-21T05:25:14.474878Z",
+     "start_time": "2021-05-21T05:25:14.455859Z"
     }
    },
    "outputs": [],
    "source": [
+    "import gc\n",
+    "import cv2\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
@@ -47,8 +49,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:25:10.185068Z",
-     "start_time": "2021-05-20T10:25:09.268771Z"
+     "end_time": "2021-05-21T05:24:31.799271Z",
+     "start_time": "2021-05-21T05:24:30.880772Z"
     }
    },
    "outputs": [
@@ -70,8 +72,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:25:10.280460Z",
-     "start_time": "2021-05-20T10:25:10.267843Z"
+     "end_time": "2021-05-21T05:24:31.989434Z",
+     "start_time": "2021-05-21T05:24:31.975113Z"
     }
    },
    "outputs": [],
@@ -93,8 +95,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:25:11.706813Z",
-     "start_time": "2021-05-20T10:25:10.362466Z"
+     "end_time": "2021-05-21T05:24:33.552543Z",
+     "start_time": "2021-05-21T05:24:32.164085Z"
     }
    },
    "outputs": [],
@@ -123,8 +125,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:25:12.084115Z",
-     "start_time": "2021-05-20T10:25:12.054101Z"
+     "end_time": "2021-05-21T05:24:34.126813Z",
+     "start_time": "2021-05-21T05:24:34.095801Z"
     }
    },
    "outputs": [
@@ -356,8 +358,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:25:12.322101Z",
-     "start_time": "2021-05-20T10:25:12.308102Z"
+     "end_time": "2021-05-21T05:24:34.650955Z",
+     "start_time": "2021-05-21T05:24:34.635955Z"
     }
    },
    "outputs": [
@@ -388,8 +390,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:25:12.622412Z",
-     "start_time": "2021-05-20T10:25:12.545106Z"
+     "end_time": "2021-05-21T05:24:35.235705Z",
+     "start_time": "2021-05-21T05:24:35.157672Z"
     }
    },
    "outputs": [
@@ -621,8 +623,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:25:12.872001Z",
-     "start_time": "2021-05-20T10:25:12.856999Z"
+     "end_time": "2021-05-21T05:24:35.755858Z",
+     "start_time": "2021-05-21T05:24:35.741273Z"
     }
    },
    "outputs": [
@@ -653,8 +655,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:25:13.126999Z",
-     "start_time": "2021-05-20T10:25:13.097000Z"
+     "end_time": "2021-05-21T05:24:36.276709Z",
+     "start_time": "2021-05-21T05:24:36.245708Z"
     }
    },
    "outputs": [
@@ -966,8 +968,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:25:13.412006Z",
-     "start_time": "2021-05-20T10:25:13.396999Z"
+     "end_time": "2021-05-21T05:24:36.882228Z",
+     "start_time": "2021-05-21T05:24:36.868224Z"
     }
    },
    "outputs": [],
@@ -983,11 +985,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:30:34.004597Z",
-     "start_time": "2021-05-20T10:30:33.582479Z"
+     "end_time": "2021-05-21T05:24:38.042521Z",
+     "start_time": "2021-05-21T05:24:37.583220Z"
     }
    },
    "outputs": [
@@ -1024,11 +1026,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-21T05:24:38.768916Z",
+     "start_time": "2021-05-21T05:24:38.754108Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2048, 28, 28, 1)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train = train.drop([\"id\", \"digit\", \"letter\"], axis=1).values\n",
+    "x_train = x_train.reshape(-1, 28, 28, 1)\n",
+    "\n",
+    "# threshold 미지정\n",
+    "# x_train = np.where((x_train<=20)&(x_train!=0) ,0.,x_train)\n",
+    "x_train = x_train/255\n",
+    "x_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-21T05:24:39.482049Z",
+     "start_time": "2021-05-21T05:24:39.467046Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2048, 10)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = train[\"digit\"]\n",
+    "y_train = np.zeros((len(y), len(y.unique())))\n",
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-21T05:24:40.207758Z",
+     "start_time": "2021-05-21T05:24:40.194176Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for idx, digit in enumerate(y):\n",
+    "    y_train[idx, digit] = 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-21T05:12:18.670600Z",
+     "start_time": "2021-05-21T05:12:18.550585Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "x_train_resized = np.zeros([2048, 280, 280, 1], dtype=np.int64)\n",
+    "\n",
+    "# (28, 28) -> (280, 280) resize\n",
+    "for idx, img in enumerate(x_train):\n",
+    "    resized = cv2.resize(img, (280, 280), interpolation=cv2.INTER_CUBIC)\n",
+    "    x_train_resized[idx] = resized\n",
+    "    del resized\n",
+    "    gc.collect()"
+   ]
   }
  ],
  "metadata": {
