[Fix] Change the image not to be saved each time, and if it exists, not to be saved

--- a/ANBW_v2.ipynb
+++ b/ANBW_v2.ipynb
@@ -22,8 +22,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:16:04.139975Z",
-     "start_time": "2021-05-25T11:16:04.122011Z"
+     "end_time": "2021-05-26T02:57:24.274182Z",
+     "start_time": "2021-05-26T02:57:24.259118Z"
     }
    },
    "outputs": [],
@@ -37,8 +37,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:16:08.331460Z",
-     "start_time": "2021-05-25T11:16:04.585053Z"
+     "end_time": "2021-05-26T02:57:33.503172Z",
+     "start_time": "2021-05-26T02:57:24.420473Z"
     }
    },
    "outputs": [],
@@ -59,8 +59,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:16:09.686309Z",
-     "start_time": "2021-05-25T11:16:08.769808Z"
+     "end_time": "2021-05-26T02:57:36.828054Z",
+     "start_time": "2021-05-26T02:57:33.521113Z"
     }
    },
    "outputs": [
@@ -82,8 +82,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:16:10.143049Z",
-     "start_time": "2021-05-25T11:16:10.128032Z"
+     "end_time": "2021-05-26T02:57:36.860055Z",
+     "start_time": "2021-05-26T02:57:36.846058Z"
     }
    },
    "outputs": [],
@@ -105,8 +105,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:16:11.981205Z",
-     "start_time": "2021-05-25T11:16:10.584047Z"
+     "end_time": "2021-05-26T02:57:38.443519Z",
+     "start_time": "2021-05-26T02:57:36.878057Z"
     }
    },
    "outputs": [],
@@ -135,8 +135,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:16:13.248240Z",
-     "start_time": "2021-05-25T11:16:13.218137Z"
+     "end_time": "2021-05-26T02:57:38.618265Z",
+     "start_time": "2021-05-26T02:57:38.588263Z"
     }
    },
    "outputs": [
@@ -368,8 +368,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:16:14.469527Z",
-     "start_time": "2021-05-25T11:16:14.454483Z"
+     "end_time": "2021-05-26T02:57:38.665710Z",
+     "start_time": "2021-05-26T02:57:38.651224Z"
     }
    },
    "outputs": [
@@ -400,8 +400,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:16:15.752785Z",
-     "start_time": "2021-05-25T11:16:15.674792Z"
+     "end_time": "2021-05-26T02:57:38.792698Z",
+     "start_time": "2021-05-26T02:57:38.698699Z"
     }
    },
    "outputs": [
@@ -633,8 +633,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:16:16.986061Z",
-     "start_time": "2021-05-25T11:16:16.972547Z"
+     "end_time": "2021-05-26T02:57:38.855149Z",
+     "start_time": "2021-05-26T02:57:38.840834Z"
     }
    },
    "outputs": [
@@ -665,8 +665,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:16:18.238003Z",
-     "start_time": "2021-05-25T11:16:18.206918Z"
+     "end_time": "2021-05-26T02:57:38.933485Z",
+     "start_time": "2021-05-26T02:57:38.903985Z"
     }
    },
    "outputs": [
@@ -978,8 +978,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:16:19.622783Z",
-     "start_time": "2021-05-25T11:16:19.608957Z"
+     "end_time": "2021-05-26T02:57:39.013072Z",
+     "start_time": "2021-05-26T02:57:38.998790Z"
     }
    },
    "outputs": [],
@@ -995,11 +995,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:16:21.962178Z",
-     "start_time": "2021-05-25T11:16:21.471105Z"
+     "end_time": "2021-05-26T02:59:21.834942Z",
+     "start_time": "2021-05-26T02:59:21.571942Z"
     }
    },
    "outputs": [
@@ -1030,9 +1030,10 @@
     "\n",
     "if not(os.path.isdir(img_save_path)):\n",
     "    os.makedirs(os.path.join(img_save_path))\n",
-    "\n",
-    "plt.savefig(img_save_path + \"random_train_visualize.png\",\n",
-    "            facecolor=\"#eeeeee\", bbox_inches=\"tight\")"
+    "    \n",
+    "img_name = img_save_path + \"random_train_visualize.png\"\n",
+    "if not(os.path.isfile(img_name)):\n",
+    "    plt.savefig(img_save_path + \"random_train_visualize.png\", facecolor=\"#eeeeee\", bbox_inches=\"tight\")"
    ]
   },
   {
@@ -1202,17 +1203,18 @@
     "if not(os.path.isdir(img_save_path)):\n",
     "    os.makedirs(os.path.join(img_save_path))\n",
     "\n",
-    "plt.savefig(img_save_path + \"resized_train_visualize.png\",\n",
-    "            facecolor=\"#eeeeee\", bbox_inches=\"tight\")"
+    "img_name = img_save_path + \"resized_train_visualize.png\"\n",
+    "if not(os.path.isfile(img_name)):\n",
+    "    plt.savefig(img_name, facecolor=\"#eeeeee\", bbox_inches=\"tight\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:19:12.005031Z",
-     "start_time": "2021-05-25T11:19:11.469733Z"
+     "end_time": "2021-05-25T11:27:48.270207Z",
+     "start_time": "2021-05-25T11:27:47.719675Z"
     }
    },
    "outputs": [],
@@ -1229,11 +1231,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:27:42.004234Z",
-     "start_time": "2021-05-25T11:27:41.998232Z"
+     "end_time": "2021-05-25T11:27:50.805238Z",
+     "start_time": "2021-05-25T11:27:50.792198Z"
     }
    },
    "outputs": [],
@@ -1245,11 +1247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-25T11:13:17.723094Z",
-     "start_time": "2021-05-25T11:13:17.687135Z"
+     "end_time": "2021-05-25T11:27:59.826046Z",
+     "start_time": "2021-05-25T11:27:53.288344Z"
     }
    },
    "outputs": [],
@@ -1260,7 +1262,7 @@
     "    input_shape=(280, 280, 3),\n",
     "    classes=10,\n",
     "    classifier_activation=\"softmax\",\n",
-    ")"
+    ")S"
    ]
   },
   {
@@ -1330,7 +1332,7 @@
     "instance",
     "_Feature"
    ],
-   "window_display": false
+   "window_display": true
   }
  },
  "nbformat": 4,
