[Feat] Set seed of train_test_split

--- a/ANBW_v1.ipynb
+++ b/ANBW_v1.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:35.665260Z",
-     "start_time": "2021-05-20T10:41:35.660265Z"
+     "end_time": "2021-05-30T05:58:05.463631Z",
+     "start_time": "2021-05-30T05:58:05.453654Z"
     }
    },
    "outputs": [],
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:39.453964Z",
-     "start_time": "2021-05-20T10:41:35.666297Z"
+     "end_time": "2021-05-30T05:58:12.275963Z",
+     "start_time": "2021-05-30T05:58:05.706608Z"
     }
    },
    "outputs": [],
@@ -50,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:40.370257Z",
-     "start_time": "2021-05-20T10:41:39.454643Z"
+     "end_time": "2021-05-30T05:58:12.401931Z",
+     "start_time": "2021-05-30T05:58:12.294927Z"
     }
    },
    "outputs": [
@@ -73,18 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:40.385487Z",
-     "start_time": "2021-05-20T10:41:40.372215Z"
+     "end_time": "2021-05-30T05:58:12.433923Z",
+     "start_time": "2021-05-30T05:58:12.419929Z"
     }
    },
    "outputs": [],
    "source": [
     "# 재현성 및 동일 조건을 만들기 위해 seed 설정\n",
-    "np.random.seed(1234)\n",
-    "tf.random.set_seed(1234)"
+    "SEED = 1234\n",
+    "np.random.seed(SEED)\n",
+    "tf.random.set_seed(SEED)"
    ]
   },
   {
@@ -96,11 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:41.718023Z",
-     "start_time": "2021-05-20T10:41:40.387216Z"
+     "end_time": "2021-05-30T05:58:14.495925Z",
+     "start_time": "2021-05-30T05:58:12.452925Z"
     }
    },
    "outputs": [],
@@ -119,11 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:41.750045Z",
-     "start_time": "2021-05-20T10:41:41.718981Z"
+     "end_time": "2021-05-30T05:58:14.683946Z",
+     "start_time": "2021-05-30T05:58:14.638921Z"
     }
    },
    "outputs": [
@@ -341,7 +342,7 @@
        "[5 rows x 786 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,11 +353,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:41.766048Z",
-     "start_time": "2021-05-20T10:41:41.751047Z"
+     "end_time": "2021-05-30T05:58:14.778930Z",
+     "start_time": "2021-05-30T05:58:14.765932Z"
     }
    },
    "outputs": [
@@ -366,7 +367,7 @@
        "(2048, 787)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,11 +385,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:41.861218Z",
-     "start_time": "2021-05-20T10:41:41.768039Z"
+     "end_time": "2021-05-30T05:58:14.953926Z",
+     "start_time": "2021-05-30T05:58:14.843925Z"
     }
    },
    "outputs": [
@@ -606,7 +607,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,11 +618,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:41.877208Z",
-     "start_time": "2021-05-20T10:41:41.865171Z"
+     "end_time": "2021-05-30T05:58:15.032923Z",
+     "start_time": "2021-05-30T05:58:15.017953Z"
     }
    },
    "outputs": [
@@ -631,7 +632,7 @@
        "(20480, 786)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,11 +650,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:42.021217Z",
-     "start_time": "2021-05-20T10:41:41.878172Z"
+     "end_time": "2021-05-30T05:58:15.285954Z",
+     "start_time": "2021-05-30T05:58:15.096926Z"
     }
    },
    "outputs": [
@@ -690,11 +691,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:42.053230Z",
-     "start_time": "2021-05-20T10:41:42.023177Z"
+     "end_time": "2021-05-30T05:58:15.365955Z",
+     "start_time": "2021-05-30T05:58:15.335925Z"
     }
    },
    "outputs": [],
@@ -706,11 +707,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:42.069170Z",
-     "start_time": "2021-05-20T10:41:42.054209Z"
+     "end_time": "2021-05-30T05:58:15.445924Z",
+     "start_time": "2021-05-30T05:58:15.432921Z"
     }
    },
    "outputs": [],
@@ -724,16 +725,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:42.100236Z",
-     "start_time": "2021-05-20T10:41:42.070193Z"
+     "end_time": "2021-05-30T05:58:37.751739Z",
+     "start_time": "2021-05-30T05:58:37.714265Z"
     }
    },
    "outputs": [],
    "source": [
-    "x_train, x_valid, y_train, y_valid = train_test_split(x_train, y_train, test_size=0.2, shuffle=True)"
+    "x_train, x_valid, y_train, y_valid = train_test_split(x_train, y_train, test_size=0.2, random_state=SEED, shuffle=True)"
    ]
   },
   {
@@ -745,11 +746,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:42.195204Z",
-     "start_time": "2021-05-20T10:41:42.103174Z"
+     "end_time": "2021-05-30T05:58:40.145519Z",
+     "start_time": "2021-05-30T05:58:40.126519Z"
     }
    },
    "outputs": [],
@@ -785,11 +786,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-20T10:41:45.103891Z",
-     "start_time": "2021-05-20T10:41:42.196176Z"
+     "end_time": "2021-05-30T05:58:45.483899Z",
+     "start_time": "2021-05-30T05:58:40.499526Z"
     }
    },
    "outputs": [
