--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -5,8 +5,159 @@
    "metadata": {},
    "source": [
     "# ANBW_v3\n",
-    "- Solve overfitting problem\n",
-    "- data generator apply"
+    "- To do\n",
+    "    - Improve model performance\n",
+    "    - Overfitting Troubleshooting\n",
+    "    - Reusable Pipeline Configuration\n",
+    "    - Apply appropriate garbage collecting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-07T01:56:07.341400Z",
+     "start_time": "2021-06-07T01:56:07.327397Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = \"3\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-07T01:56:15.599720Z",
+     "start_time": "2021-06-07T01:56:07.342402Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import gc\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-07T01:56:19.089301Z",
+     "start_time": "2021-06-07T01:56:15.600721Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA avilable: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"CUDA avilable:\",\n",
+    "     True if tf.config.list_physical_devices(\"GPU\") else False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-07T01:56:19.105262Z",
+     "start_time": "2021-06-07T01:56:19.091259Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SEED = 1234\n",
+    "np.random.seed(SEED)\n",
+    "tf.random.set_seed(SEED)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-07T01:58:39.644121Z",
+     "start_time": "2021-06-07T01:58:37.913355Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv(\"./data/train.csv\")\n",
+    "test = pd.read_csv(\"./data/test.csv\")\n",
+    "submission = pd.read_csv(\"./data/submission.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-09T02:57:01.652633Z",
+     "start_time": "2021-06-09T02:57:01.640630Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory already exists: ./img/v3/\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_save_path = \"./img/v3/\"\n",
+    "\n",
+    "if not(os.path.isdir(img_save_path)):\n",
+    "    os.makedirs(os.path.join(img_save_path))\n",
+    "    print(\"Directory Created: %s\" % img_save_path)\n",
+    "else:\n",
+    "    print(\"Directory already exists: %s\" % img_save_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train data"
    ]
   },
   {
