--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -24,8 +24,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T01:16:30.560515Z",
-     "start_time": "2021-06-16T01:16:30.546482Z"
+     "end_time": "2021-06-16T23:35:51.694313Z",
+     "start_time": "2021-06-16T23:35:51.682312Z"
     }
    },
    "outputs": [],
@@ -39,8 +39,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T01:16:34.470510Z",
-     "start_time": "2021-06-16T01:16:30.561478Z"
+     "end_time": "2021-06-16T23:35:57.894698Z",
+     "start_time": "2021-06-16T23:35:51.696314Z"
     }
    },
    "outputs": [],
@@ -61,8 +61,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T01:16:37.539749Z",
-     "start_time": "2021-06-16T01:16:34.471510Z"
+     "end_time": "2021-06-16T23:35:58.956453Z",
+     "start_time": "2021-06-16T23:35:57.896690Z"
     }
    },
    "outputs": [
@@ -84,8 +84,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T01:16:37.554749Z",
-     "start_time": "2021-06-16T01:16:37.540749Z"
+     "end_time": "2021-06-16T23:35:58.971455Z",
+     "start_time": "2021-06-16T23:35:58.958456Z"
     }
    },
    "outputs": [],
@@ -107,8 +107,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T01:16:38.906078Z",
-     "start_time": "2021-06-16T01:16:37.555749Z"
+     "end_time": "2021-06-16T23:36:00.687052Z",
+     "start_time": "2021-06-16T23:35:58.972456Z"
     }
    },
    "outputs": [],
@@ -123,8 +123,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T01:16:38.921750Z",
-     "start_time": "2021-06-16T01:16:38.907751Z"
+     "end_time": "2021-06-16T23:36:00.702719Z",
+     "start_time": "2021-06-16T23:36:00.688718Z"
     }
    },
    "outputs": [
@@ -165,8 +165,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T01:16:39.033786Z",
-     "start_time": "2021-06-16T01:16:38.922751Z"
+     "end_time": "2021-06-16T23:36:00.734754Z",
+     "start_time": "2021-06-16T23:36:00.703720Z"
     }
    },
    "outputs": [
@@ -395,11 +395,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T10:44:43.307847Z",
-     "start_time": "2021-06-16T10:44:43.192846Z"
+     "end_time": "2021-06-16T23:36:00.750718Z",
+     "start_time": "2021-06-16T23:36:00.736719Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_digit_cnt = train[\"digit\"].value_counts(normalize=False, sort=False).values\n",
+    "train_digit_label = sorted(train[\"digit\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-16T23:39:45.436927Z",
+     "start_time": "2021-06-16T23:39:45.222999Z"
     }
    },
    "outputs": [
@@ -417,15 +432,312 @@
     }
    ],
    "source": [
-    "train_digit_cnt = train[\"digit\"].value_counts(normalize=False, sort=False).values\n",
-    "train_digit_label = sorted(train[\"digit\"].unique())\n",
-    "\n",
     "plt.bar(train_digit_label, train_digit_cnt)\n",
     "plt.title(\"Train data's digit distribution\")\n",
     "plt.xticks(train_digit_label)\n",
     "plt.xlabel(\"digit\")\n",
     "plt.ylabel(\"count\")\n",
-    "plt.show()"
+    "\n",
+    "img_path = img_save_path + \"train_digit_distribution.png\"\n",
+    "if not(os.path.isfile(img_path)):\n",
+    "    plt.savefig(img_path, facecolor=\"#eeeeee\", bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-16T23:41:06.774650Z",
+     "start_time": "2021-06-16T23:41:06.757649Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2048, 787)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-16T23:41:42.110144Z",
+     "start_time": "2021-06-16T23:41:42.013116Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>letter</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>...</th>\n",
+       "      <th>774</th>\n",
+       "      <th>775</th>\n",
+       "      <th>776</th>\n",
+       "      <th>777</th>\n",
+       "      <th>778</th>\n",
+       "      <th>779</th>\n",
+       "      <th>780</th>\n",
+       "      <th>781</th>\n",
+       "      <th>782</th>\n",
+       "      <th>783</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2049</th>\n",
+       "      <td>L</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2050</th>\n",
+       "      <td>C</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2051</th>\n",
+       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2052</th>\n",
+       "      <td>K</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2053</th>\n",
+       "      <td>W</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 785 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     letter  0  1  2  3  4  5  6  7  8  ...  774  775  776  777  778  779  \\\n",
+       "id                                      ...                                 \n",
+       "2049      L  0  4  0  2  4  2  3  1  0  ...    2    0    4    2    2    4   \n",
+       "2050      C  4  1  4  0  1  1  0  2  2  ...    0    3    2    4    2    4   \n",
+       "2051      S  0  4  0  1  3  2  3  0  2  ...    1    3    2    0    3    2   \n",
+       "2052      K  2  1  3  3  3  4  3  0  0  ...    3    0    3    2    4    1   \n",
+       "2053      W  1  0  1  1  2  2  1  4  1  ...    4    3    1    4    0    2   \n",
+       "\n",
+       "      780  781  782  783  \n",
+       "id                        \n",
+       "2049    3    4    1    4  \n",
+       "2050    2    2    1    2  \n",
+       "2051    3    0    1    4  \n",
+       "2052    0    4    4    4  \n",
+       "2053    1    2    3    4  \n",
+       "\n",
+       "[5 rows x 785 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.set_index(\"id\").head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-17T10:50:36.444894Z",
+     "start_time": "2021-06-17T10:50:36.433898Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20480, 786)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data visualization"
    ]
   },
   {
@@ -433,7 +745,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "visualization_data = train.loc[:8]\n"
+   ]
   }
  ],
  "metadata": {
