--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -778,6 +778,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
