--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -24,8 +24,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T23:35:51.694313Z",
-     "start_time": "2021-06-16T23:35:51.682312Z"
+     "end_time": "2021-06-29T05:14:52.265152Z",
+     "start_time": "2021-06-29T05:14:52.248182Z"
     }
    },
    "outputs": [],
@@ -39,8 +39,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T23:35:57.894698Z",
-     "start_time": "2021-06-16T23:35:51.696314Z"
+     "end_time": "2021-06-29T05:14:56.067594Z",
+     "start_time": "2021-06-29T05:14:52.267154Z"
     }
    },
    "outputs": [],
@@ -61,8 +61,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T23:35:58.956453Z",
-     "start_time": "2021-06-16T23:35:57.896690Z"
+     "end_time": "2021-06-29T05:14:56.650265Z",
+     "start_time": "2021-06-29T05:14:56.069595Z"
     }
    },
    "outputs": [
@@ -84,8 +84,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T23:35:58.971455Z",
-     "start_time": "2021-06-16T23:35:58.958456Z"
+     "end_time": "2021-06-29T05:14:56.666192Z",
+     "start_time": "2021-06-29T05:14:56.651192Z"
     }
    },
    "outputs": [],
@@ -107,8 +107,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T23:36:00.687052Z",
-     "start_time": "2021-06-16T23:35:58.972456Z"
+     "end_time": "2021-06-29T05:14:58.042547Z",
+     "start_time": "2021-06-29T05:14:56.667193Z"
     }
    },
    "outputs": [],
@@ -123,8 +123,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T23:36:00.702719Z",
-     "start_time": "2021-06-16T23:36:00.688718Z"
+     "end_time": "2021-06-29T05:14:58.058510Z",
+     "start_time": "2021-06-29T05:14:58.043508Z"
     }
    },
    "outputs": [
@@ -165,8 +165,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T23:36:00.734754Z",
-     "start_time": "2021-06-16T23:36:00.703720Z"
+     "end_time": "2021-06-29T05:14:58.090509Z",
+     "start_time": "2021-06-29T05:14:58.059513Z"
     }
    },
    "outputs": [
@@ -398,8 +398,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T23:36:00.750718Z",
-     "start_time": "2021-06-16T23:36:00.736719Z"
+     "end_time": "2021-06-29T05:14:58.106512Z",
+     "start_time": "2021-06-29T05:14:58.094530Z"
     }
    },
    "outputs": [],
@@ -410,11 +410,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T23:39:45.436927Z",
-     "start_time": "2021-06-16T23:39:45.222999Z"
+     "end_time": "2021-06-29T05:14:58.249544Z",
+     "start_time": "2021-06-29T05:14:58.108514Z"
     }
    },
    "outputs": [
@@ -445,11 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T23:41:06.774650Z",
-     "start_time": "2021-06-16T23:41:06.757649Z"
+     "end_time": "2021-06-29T05:14:58.265545Z",
+     "start_time": "2021-06-29T05:14:58.250549Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
        "(2048, 787)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,11 +477,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T23:41:42.110144Z",
-     "start_time": "2021-06-16T23:41:42.013116Z"
+     "end_time": "2021-06-29T05:14:58.344551Z",
+     "start_time": "2021-06-29T05:14:58.266511Z"
     }
    },
    "outputs": [
@@ -699,7 +699,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,11 +710,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-17T10:50:36.444894Z",
-     "start_time": "2021-06-17T10:50:36.433898Z"
+     "end_time": "2021-06-29T05:14:58.360509Z",
+     "start_time": "2021-06-29T05:14:58.345512Z"
     }
    },
    "outputs": [
@@ -724,7 +724,7 @@
        "(20480, 786)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,11 +742,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-17T11:00:42.869977Z",
-     "start_time": "2021-06-17T11:00:42.429183Z"
+     "end_time": "2021-06-29T05:14:58.727511Z",
+     "start_time": "2021-06-29T05:14:58.361511Z"
     }
    },
    "outputs": [
@@ -786,10 +786,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-29T07:12:13.999051Z",
+     "start_time": "2021-06-29T07:12:13.980861Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def convert(target_image):\n",
+    "    # Convert grayscale image to RGB\n",
+    "    return cv2.cvtColor(target_image, cv2.COLOR_GRAY2RGB)\n",
+    "\n",
+    "def resize(target_image):\n",
+    "    # Resize image from (28, 28) to (300, 300)\n",
+    "    return cv2.resize(target_image, (300, 300), interpolation=cv2.INTER_CUBIC)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def train_gen(raw_data):\n",
+    "    pixels = raw_data.loc[:, \"0\":].values\n",
+    "    pixels = pixels.reshape(-1, 28, 28, 1)\n",
+    "    \n",
+    "    labels = raw_data[\"digit\"]"
+   ]
   }
  ],
  "metadata": {
