[Refactor] Rename parameters for functions

--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -795,26 +795,40 @@
    },
    "outputs": [],
    "source": [
-    "def convert(target_image):\n",
+    "def convert(feature):\n",
     "    # Convert grayscale image to RGB\n",
-    "    return cv2.cvtColor(target_image, cv2.COLOR_GRAY2RGB)\n",
+    "    return cv2.cvtColor(feature, cv2.COLOR_GRAY2RGB)\n",
     "\n",
-    "def resize(target_image):\n",
+    "def resize(feature):\n",
     "    # Resize image from (28, 28) to (300, 300)\n",
-    "    return cv2.resize(target_image, (300, 300), interpolation=cv2.INTER_CUBIC)"
+    "    return cv2.resize(feature, (300, 300), interpolation=cv2.INTER_CUBIC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-29T11:02:47.731630Z",
+     "start_time": "2021-06-29T11:02:47.723602Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "def train_gen(raw_data):\n",
+    "def gen(raw_data):\n",
     "    pixels = raw_data.loc[:, \"0\":].values\n",
     "    pixels = pixels.reshape(-1, 28, 28, 1)\n",
+    "    pixels = np.where((pixels<=20)&(pixels!=0), 0., pixels)\n",
+    "    pixels = pixels / 255\n",
+    "    pixels = pixels.astype(\"float32\")\n",
+    "    labels = raw_data[\"digit\"]\n",
     "    \n",
-    "    labels = raw_data[\"digit\"]"
+    "    for pixel, label in zip(pixels, labels):\n",
+    "        cvt_image = convert(pixel)\n",
+    "        resized_image = resize(cvt_image)\n",
+    "        label = tf.keras.utils.to_categorical(label, 10)\n",
+    "        \n",
+    "        yield(resized_image, label)"
    ]
   }
  ],
