[Feat] Add data generator

--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -826,7 +826,7 @@
     "    for pixel, label in zip(pixels, labels):\n",
     "        cvt_image = convert(pixel)\n",
     "        resized_image = resize(cvt_image)\n",
-    "        label = tf.keras.utils.to_categorical(label, 10)\n",
+    "        label = tf.keras.utils.to_caㅌtegorical(label, 10)\n",
     "        \n",
     "        yield(resized_image, label)"
    ]
