--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -946,7 +946,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialing model¶"
+    "## Initialing model"
    ]
   },
   {
