[Feat&Fix] Solve validation split issue and add split function

--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -24,8 +24,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:51.992082Z",
-     "start_time": "2021-07-05T02:01:51.980097Z"
+     "end_time": "2021-07-05T07:40:05.935336Z",
+     "start_time": "2021-07-05T07:40:05.926338Z"
     }
    },
    "outputs": [],
@@ -39,8 +39,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:55.599840Z",
-     "start_time": "2021-07-05T02:01:51.994106Z"
+     "end_time": "2021-07-05T07:40:11.919835Z",
+     "start_time": "2021-07-05T07:40:05.937336Z"
     }
    },
    "outputs": [],
@@ -61,8 +61,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:56.057422Z",
-     "start_time": "2021-07-05T02:01:55.602922Z"
+     "end_time": "2021-07-05T07:40:12.932529Z",
+     "start_time": "2021-07-05T07:40:11.920836Z"
     }
    },
    "outputs": [
@@ -84,8 +84,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:56.072868Z",
-     "start_time": "2021-07-05T02:01:56.059423Z"
+     "end_time": "2021-07-05T07:40:12.948496Z",
+     "start_time": "2021-07-05T07:40:12.934490Z"
     }
    },
    "outputs": [],
@@ -107,8 +107,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:57.376697Z",
-     "start_time": "2021-07-05T02:01:56.073868Z"
+     "end_time": "2021-07-05T07:40:14.722621Z",
+     "start_time": "2021-07-05T07:40:12.950491Z"
     }
    },
    "outputs": [],
@@ -123,8 +123,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:57.392400Z",
-     "start_time": "2021-07-05T02:01:57.378398Z"
+     "end_time": "2021-07-05T07:40:14.738619Z",
+     "start_time": "2021-07-05T07:40:14.723562Z"
     }
    },
    "outputs": [
@@ -165,8 +165,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:57.408399Z",
-     "start_time": "2021-07-05T02:01:57.394385Z"
+     "end_time": "2021-07-05T07:40:14.753564Z",
+     "start_time": "2021-07-05T07:40:14.739597Z"
     }
    },
    "outputs": [],
@@ -191,8 +191,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:57.440396Z",
-     "start_time": "2021-07-05T02:01:57.411393Z"
+     "end_time": "2021-07-05T07:40:14.801597Z",
+     "start_time": "2021-07-05T07:40:14.756565Z"
     }
    },
    "outputs": [
@@ -424,8 +424,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:57.456401Z",
-     "start_time": "2021-07-05T02:01:57.442358Z"
+     "end_time": "2021-07-05T07:40:14.817561Z",
+     "start_time": "2021-07-05T07:40:14.803564Z"
     }
    },
    "outputs": [],
@@ -439,8 +439,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:57.583731Z",
-     "start_time": "2021-07-05T02:01:57.457394Z"
+     "end_time": "2021-07-05T07:40:14.945623Z",
+     "start_time": "2021-07-05T07:40:14.818607Z"
     }
    },
    "outputs": [
@@ -480,8 +480,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:57.599815Z",
-     "start_time": "2021-07-05T02:01:57.585358Z"
+     "end_time": "2021-07-05T07:40:14.961620Z",
+     "start_time": "2021-07-05T07:40:14.947615Z"
     }
    },
    "outputs": [
@@ -512,8 +512,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:57.679544Z",
-     "start_time": "2021-07-05T02:01:57.602571Z"
+     "end_time": "2021-07-05T07:40:15.040615Z",
+     "start_time": "2021-07-05T07:40:14.962614Z"
     }
    },
    "outputs": [
@@ -745,8 +745,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:57.695545Z",
-     "start_time": "2021-07-05T02:01:57.680506Z"
+     "end_time": "2021-07-05T07:40:15.055615Z",
+     "start_time": "2021-07-05T07:40:15.041616Z"
     }
    },
    "outputs": [
@@ -777,8 +777,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:58.058710Z",
-     "start_time": "2021-07-05T02:01:57.696564Z"
+     "end_time": "2021-07-05T07:40:15.405653Z",
+     "start_time": "2021-07-05T07:40:15.056618Z"
     }
    },
    "outputs": [
@@ -820,8 +820,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:58.154741Z",
-     "start_time": "2021-07-05T02:01:58.059710Z"
+     "end_time": "2021-07-05T07:40:15.501614Z",
+     "start_time": "2021-07-05T07:40:15.406615Z"
     }
    },
    "outputs": [
@@ -850,16 +850,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T07:18:00.504079Z",
-     "start_time": "2021-07-05T07:18:00.116936Z"
+     "end_time": "2021-07-05T07:40:15.517614Z",
+     "start_time": "2021-07-05T07:40:15.502614Z"
     }
    },
    "outputs": [],
    "source": [
-    "def train_validation_generator(path: str) -> (tf.float32, tf.int64):\n",
+    "def train_validation_generator(path: str, split_ratio: float) -> (tf.float32, tf.int64):\n",
     "    \"\"\"\n",
     "    Train Image data preproccesing and generating\n",
     "    1. Read CSV file with Pandas\n",
@@ -869,11 +869,14 @@
     "    5. Convert labels to one hot encoding array and return with preprocessed image\n",
     "    \"\"\"\n",
     "    raw_data = pd.read_csv(path)\n",
+    "    raw_data = raw_data.sample(n=int(round(raw_data.shape[0] * split_ratio)), random_state=SEED)\n",
+    "    \n",
     "    features = raw_data.loc[:, \"0\":].values\n",
     "    features = features.reshape(-1, 28, 28, 1)\n",
     "    features = np.where((features<=20)&(features!=0), 0., features)\n",
     "    features = features / 255\n",
     "    features = features.astype(\"float32\")\n",
+    "    \n",
     "    labels = raw_data[\"digit\"]\n",
     "    \n",
     "    for feat, label in zip(features, labels):\n",
@@ -889,8 +892,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:58.186712Z",
-     "start_time": "2021-07-05T02:01:58.171673Z"
+     "end_time": "2021-07-05T07:40:15.533614Z",
+     "start_time": "2021-07-05T07:40:15.518616Z"
     }
    },
    "outputs": [],
@@ -905,6 +908,7 @@
     "    5. Return preprocessed image\n",
     "    \"\"\"\n",
     "    raw_data = pd.read_csv(path)\n",
+    "    \n",
     "    features = raw_data.loc[:, \"0\":].values\n",
     "    features = features.reshape(-1, 28, 28, 1)\n",
     "    features = np.where((features<=20)&(features!=0), 0., features)\n",
@@ -923,22 +927,19 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:59.337865Z",
-     "start_time": "2021-07-05T02:01:58.187703Z"
+     "end_time": "2021-07-05T07:40:16.656483Z",
+     "start_time": "2021-07-05T07:40:15.534615Z"
     }
    },
    "outputs": [],
    "source": [
-    "train_dataset = tf.data.Dataset.from_generator(train_generator,\n",
-    "                                               (tf.float32, tf.int64),\n",
-    "                                               ((300,300, 3), (10)),\n",
-    "                                               args=(\"./data/train.csv\"))\n",
+    "train_dataset = tf.data.Dataset.from_generator(train_validation_generator, (tf.float32, tf.int64), ((300,300, 3), (10)), args=(\"./data/train.csv\", 0.8))\n",
     "train_dataset = train_dataset.shuffle(2048, seed=SEED).batch(8)\n",
     "\n",
-    "test_dataset = tf.data.Dataset.from_generator(test_generator,\n",
-    "                                              tf.float32,\n",
-    "                                              (300,300, 3),\n",
-    "                                              args=(\"./data/test.csv\"))\n",
+    "validation_dataset = tf.data.Dataset.from_generator(train_validation_generator, (tf.float32, tf.int64), ((300,300, 3), (10)), args=(\"./data/train.csv\", 0.2))\n",
+    "validation_dataset = validation_dataset.shuffle(2048, seed=SEED).batch(8)\n",
+    "\n",
+    "test_dataset = tf.data.Dataset.from_generator(test_generator, tf.float32, (300,300, 3), args=(\"./data/test.csv\"))\n",
     "test_dataset = test_dataset.shuffle(2048, seed=SEED).batch(8)"
    ]
   },
@@ -954,8 +955,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:59.353830Z",
-     "start_time": "2021-07-05T02:01:59.340527Z"
+     "end_time": "2021-07-05T07:40:16.672494Z",
+     "start_time": "2021-07-05T07:40:16.658167Z"
     }
    },
    "outputs": [],
@@ -969,8 +970,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:01:59.369527Z",
-     "start_time": "2021-07-05T02:01:59.355527Z"
+     "end_time": "2021-07-05T07:40:16.688206Z",
+     "start_time": "2021-07-05T07:40:16.674168Z"
     }
    },
    "outputs": [],
@@ -988,8 +989,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:02:02.945430Z",
-     "start_time": "2021-07-05T02:01:59.370523Z"
+     "end_time": "2021-07-05T07:40:20.089390Z",
+     "start_time": "2021-07-05T07:40:16.689168Z"
     }
    },
    "outputs": [],
@@ -1008,8 +1009,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:02:05.274756Z",
-     "start_time": "2021-07-05T02:02:02.946418Z"
+     "end_time": "2021-07-05T07:40:22.335090Z",
+     "start_time": "2021-07-05T07:40:20.090322Z"
     }
    },
    "outputs": [],
@@ -1027,8 +1028,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:02:05.306457Z",
-     "start_time": "2021-07-05T02:02:05.278421Z"
+     "end_time": "2021-07-05T07:40:22.366551Z",
+     "start_time": "2021-07-05T07:40:22.337793Z"
     }
    },
    "outputs": [
@@ -1058,8 +1059,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-05T02:02:05.321638Z",
-     "start_time": "2021-07-05T02:02:05.308446Z"
+     "end_time": "2021-07-05T07:40:22.382513Z",
+     "start_time": "2021-07-05T07:40:22.370513Z"
     },
     "code_folding": []
    },
