--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -962,29 +962,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-10T14:27:30.004934Z",
-     "start_time": "2021-07-10T14:27:29.982951Z"
+     "end_time": "2021-07-10T14:29:04.801771Z",
+     "start_time": "2021-07-10T14:29:03.693023Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'train_datasetn' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-e58f8da91ea5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Generator Issue Test\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtrain_datasetn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'train_datasetn' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "(array([[[0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         ...,\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.]],\n",
+       " \n",
+       "        [[0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         ...,\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.]],\n",
+       " \n",
+       "        [[0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         ...,\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.]],\n",
+       " \n",
+       "        ...,\n",
+       " \n",
+       "        [[0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         ...,\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.]],\n",
+       " \n",
+       "        [[0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         ...,\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.]],\n",
+       " \n",
+       "        [[0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         ...,\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.],\n",
+       "         [0., 0., 0.]]], dtype=float32),\n",
+       " array([0., 0., 1., 0., 0., 0., 0., 0., 0., 0.], dtype=float32))"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generator Issue Test\n",
-    "train_datasetn.next()"
+    "gen = train_validation_generator(\"./data/train.csv\", 0.8)\n",
+    "next(gen)"
    ]
   },
   {
