[Style] Add comments

--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -1012,12 +1012,14 @@
     }
    ],
    "source": [
+    "# Have to give args to generator with using lambda\n",
     "train_dataset = tf.data.Dataset.from_generator(\n",
     "    lambda: train_validation_generator(path=\"./data/train.csv\", fraction=0.8),\n",
     "    (tf.float32, tf.float32),\n",
     "    ([300, 300, 3], [10])\n",
     ")\n",
     "\n",
+    "# Generator Test\n",
     "list(train_dataset.take(1))"
    ]
   },
