[Style] Add some comment

--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -7,7 +7,6 @@
     "# ANBW_v3\n",
     "- To do\n",
     "    - Improve model performance\n",
-    "    - Overfitting Troubleshooting\n",
     "    - Reusable Pipeline Configuration\n",
     "    - Apply appropriate garbage collecting"
    ]
@@ -24,8 +23,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:39.795084Z",
-     "start_time": "2021-07-14T00:57:39.783106Z"
+     "end_time": "2021-07-17T13:50:06.583802Z",
+     "start_time": "2021-07-17T13:50:06.574807Z"
     }
    },
    "outputs": [],
@@ -40,8 +39,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:39.961781Z",
-     "start_time": "2021-07-14T00:57:39.952727Z"
+     "end_time": "2021-07-17T13:50:06.735629Z",
+     "start_time": "2021-07-17T13:50:06.719601Z"
     }
    },
    "outputs": [],
@@ -53,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T02:52:00.333997Z",
-     "start_time": "2021-07-14T02:52:00.321985Z"
+     "end_time": "2021-07-17T13:50:17.538242Z",
+     "start_time": "2021-07-17T13:50:06.858029Z"
     }
    },
    "outputs": [],
@@ -79,8 +78,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:46.384739Z",
-     "start_time": "2021-07-14T00:57:45.452191Z"
+     "end_time": "2021-07-17T13:50:20.857579Z",
+     "start_time": "2021-07-17T13:50:17.554965Z"
     }
    },
    "outputs": [
@@ -102,8 +101,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:46.551775Z",
-     "start_time": "2021-07-14T00:57:46.540739Z"
+     "end_time": "2021-07-17T13:50:20.887581Z",
+     "start_time": "2021-07-17T13:50:20.873579Z"
     }
    },
    "outputs": [],
@@ -122,11 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:58:16.553963Z",
-     "start_time": "2021-07-14T00:58:15.197661Z"
+     "end_time": "2021-07-17T13:50:22.770675Z",
+     "start_time": "2021-07-17T13:50:20.904582Z"
     }
    },
    "outputs": [],
@@ -141,8 +140,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:48.744242Z",
-     "start_time": "2021-07-14T00:57:48.730242Z"
+     "end_time": "2021-07-17T13:50:22.935653Z",
+     "start_time": "2021-07-17T13:50:22.922347Z"
     }
    },
    "outputs": [
@@ -183,8 +182,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:49.061241Z",
-     "start_time": "2021-07-14T00:57:49.047244Z"
+     "end_time": "2021-07-17T13:50:22.981759Z",
+     "start_time": "2021-07-17T13:50:22.968346Z"
     }
    },
    "outputs": [],
@@ -209,8 +208,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:49.391243Z",
-     "start_time": "2021-07-14T00:57:49.362240Z"
+     "end_time": "2021-07-17T13:50:23.042798Z",
+     "start_time": "2021-07-17T13:50:23.013759Z"
     }
    },
    "outputs": [
@@ -442,8 +441,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:49.751242Z",
-     "start_time": "2021-07-14T00:57:49.738246Z"
+     "end_time": "2021-07-17T13:50:23.087820Z",
+     "start_time": "2021-07-17T13:50:23.074763Z"
     }
    },
    "outputs": [],
@@ -457,8 +456,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:50.293282Z",
-     "start_time": "2021-07-14T00:57:50.159242Z"
+     "end_time": "2021-07-17T13:50:23.283757Z",
+     "start_time": "2021-07-17T13:50:23.134797Z"
     }
    },
    "outputs": [
@@ -498,8 +497,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:50.638295Z",
-     "start_time": "2021-07-14T00:57:50.625245Z"
+     "end_time": "2021-07-17T13:50:23.328799Z",
+     "start_time": "2021-07-17T13:50:23.314758Z"
     }
    },
    "outputs": [
@@ -530,8 +529,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:51.089454Z",
-     "start_time": "2021-07-14T00:57:51.015350Z"
+     "end_time": "2021-07-17T13:50:23.448795Z",
+     "start_time": "2021-07-17T13:50:23.374758Z"
     }
    },
    "outputs": [
@@ -763,8 +762,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:51.464455Z",
-     "start_time": "2021-07-14T00:57:51.450422Z"
+     "end_time": "2021-07-17T13:50:23.508788Z",
+     "start_time": "2021-07-17T13:50:23.495758Z"
     }
    },
    "outputs": [
@@ -795,8 +794,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:52.155195Z",
-     "start_time": "2021-07-14T00:57:51.871198Z"
+     "end_time": "2021-07-17T13:50:23.840490Z",
+     "start_time": "2021-07-17T13:50:23.555790Z"
     }
    },
    "outputs": [
@@ -838,15 +837,15 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T00:57:52.665713Z",
-     "start_time": "2021-07-14T00:57:52.576713Z"
+     "end_time": "2021-07-17T13:50:23.976494Z",
+     "start_time": "2021-07-17T13:50:23.887452Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20584"
+       "20588"
       ]
      },
      "execution_count": 16,
@@ -868,11 +867,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T05:17:32.844350Z",
-     "start_time": "2021-07-14T05:17:32.834351Z"
+     "end_time": "2021-07-17T13:50:24.006690Z",
+     "start_time": "2021-07-17T13:50:23.992690Z"
     }
    },
    "outputs": [],
@@ -907,11 +906,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-13T08:16:34.726658Z",
-     "start_time": "2021-07-13T08:16:34.714662Z"
+     "end_time": "2021-07-17T13:50:24.036559Z",
+     "start_time": "2021-07-17T13:50:24.023462Z"
     }
    },
    "outputs": [],
@@ -942,85 +941,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-14T10:42:55.232861Z",
-     "start_time": "2021-07-14T10:42:54.064335Z"
+     "end_time": "2021-07-17T13:52:36.535301Z",
+     "start_time": "2021-07-17T13:52:33.547078Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(<tf.Tensor: shape=(300, 300, 3), dtype=float32, numpy=\n",
-       "  array([[[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       "  \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       "  \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       "  \n",
-       "         ...,\n",
-       "  \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       "  \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       "  \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]]], dtype=float32)>,\n",
-       "  <tf.Tensor: shape=(10,), dtype=float32, numpy=array([0., 0., 1., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)>)]"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Have to give args to generator with using lambda\n",
+    "# Train: 0.8\n",
+    "# Validation: 0.2\n",
     "train_dataset = tf.data.Dataset.from_generator(\n",
     "    lambda: train_validation_generator(path=\"./data/train.csv\", fraction=0.8),\n",
     "    (tf.float32, tf.float32),\n",
     "    ([300, 300, 3], [10])\n",
     ")\n",
     "\n",
-    "# Generator Test\n",
-    "list(train_dataset.take(1))"
+    "validation_dataset = tf.data.Dataset.from_generator(\n",
+    "    lambda: train_validation_generator(path=\"./data/train.csv\", fraction=0.2),\n",
+    "    (tf.float32, tf.float32),\n",
+    "    ([300, 300, 3], [10])\n",
+    ")\n",
+    "\n",
+    "test_dataset = tf.data.Dataset.from_generator(\n",
+    "    lambda: test_generator(path=\"./data/test.csv\"),\n",
+    "    (tf.float32),\n",
+    "    ([300, 300, 3])\n",
+    ")"
    ]
   },
   {
